Trabalhos relacionados, parágrafo com descrição do que foi feito no nosso trabalho

--- a/article/wscad.tex
+++ b/article/wscad.tex
@@ -170,7 +170,12 @@ Assim, as operações são feitas sobre uma função que leva o prefixo \texttt{
 	
 	No que diz respeito às bibliotecas relacionadas a lógica \textit{fuzzy}, existe uma desenvolvida na linguagem Java, chamada de jFuzzyLogic~\cite{cingolani:12, cingolani:13}. Esta biblioteca é uma implementação de sistemas \textit{fuzzy} que permite projetar controladores de lógica \textit{fuzzy}. Por fim, existe a biblioteca FuzzyGPU~\cite{defour:14}, que é o trabalho relacionado mais próximo ao que este artigo apresenta. FuzzyGPU é uma implementação de uma biblioteca de aritmética \textit{fuzzy} voltada a GPUs.
 	
-\todo[inline]{Falta fazer um paralelo entre o que foi feito neste trabalho de diferente com os trabalhos relacionados}
+	Nesse trabalho foi implementado a biblioteca CudaFuzzy, nele foram realizados testes com operadores matemáticos da lógica Fuzzy. O objetivo do trabalho foi obter uma implementação que consiga paralelisar as aplicações desenvolvidas na biblioteca CudaFuzzy, e assim obter melhor desempenho computacional com uso dessa biblioteca de operações direcionada para GPUs. 
+	
+
+
+%	
+%\todo[inline]{Falta fazer um paralelo entre o que foi feito neste trabalho de diferente com os trabalhos relacionados}
  	
 \bibliographystyle{sbc}
 \bibliography{wscad}
